log/build_2024-04-17_10-10-13/ros2_control_bringup/stderr.log
  File "/home/aliha1313/FUM6R-WS/install/ros2_control_bringup/lib/python3.10/site-packages/ros2_control_bringup/ball_spawn.py", line 5
    from ignition.
                  ^
SyntaxError: invalid syntax

